--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -1,3 +1,13 @@
     <h2>Description</h2>
 
     <p>Carbonara is made with guanciale, eggs, Pecorino Romano cheese, spaghetti pasta, and lots of black pepper. Italians don't add extra igredients like cream, milk, garlic, or onion. Try this recipe if you want to make an authentic, creamy carbonara that comes straight from Italy.</p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Oil</li>
+        <li>Guanciale</li>
+        <li>Spaghetti</li>
+        <li>Eggs</li>
+        <li>Cheese</li>
+        <li>Seasonings</li>
+    </ul>
