--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -11,3 +11,12 @@
         <li>Cheese</li>
         <li>Seasonings</li>
     </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>Cook the pork in olive oil until browned and crispy, then drain on paper towels</li>
+        <li>Boil the spaghetti in salted water. Drain and return to the pot. let cool</li>
+        <li>Whisk the eggs, 1/2 of the cheese, and some pepper in a bowl until smoth.</li>
+        <li>Pour the egg mixture over the pasta, stirring quickly, until creamy.</li>
+        <li>Stir in the pork, then top with the remaining cheese and more black pepper.</li>
+    </ol>
