--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,3 +1,16 @@
     <h2>Description</h2>
 
     <p>Making lasagna can be time-consuming, but the results are well worth the wait. You'll find a detailed ingredient list and step-by-step instructions in the recipe below to do the best lasagna ever.</p>
+
+    <h2>Ingredients</h2>
+
+    <ul>
+        <li>Meat</li>
+        <li>Onion and garlic</li>
+        <li>Tomato sauce and tomato paste</li>
+        <li>Sugar</li>
+        <li>Spice and seasonings</li>
+        <li>Lasagna noodles</li>
+        <li>Cheese</li>
+        <li>Egg</li>
+    </ul>
