--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -14,3 +14,15 @@
         <li>Cheese</li>
         <li>Egg</li>
     </ul>
+
+    <h2>Steps</h2>
+
+    <ol>
+        <li>Make the meat sauce.</li>
+        <li>Cook the noodles.</li>
+        <li>Make the cheese mixture.</li>
+        <li>Layer the lasagna according to your taste.</li>
+        <li>Cover with foil for the first 25min.</li>
+        <li>Cook uncovered for the final 25min.</li>
+        <li>Let the lasagna rest before serving</li>
+    </ol>
